--- a/Athena/Athena.csproj
+++ b/Athena/Athena.csproj
@@ -129,4 +129,7 @@
     <Resource Include="favicon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName)==Release xcopy /Y "$(TargetPath)" "$(SolutionDir)..\AshVsEvilDead\"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
